# frameitcli

./: .gitignore  README.md  pyproject.toml
src/frameit/: cli.py  constants.py  file_explorer.py  framing_orchestartor.py  framing_orchestrator.py  main.py  picture_framer.py  picture_framer_utils.py
src/frameit/core/: image_framer.py
tests/: test_file_explorer.py  test_framing_orchestrator.py  test_picture_framer_utils.py
tests/test_frameit/: test_framing_orchestrator.py
tests/test_frameit/core/: test_image_framer.py
